Change the endpoints.yaml format
